--- a/prova1.ipynb
+++ b/prova1.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled0.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyO01N9Fy6z0WZ9w7cGqRGKi",
+      "authorship_tag": "ABX9TyPDu6LMfObEaOTIQLbVMWU+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,13 +30,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Dn_vjC4iSuRW",
-        "outputId": "4a1a1be1-30a4-4275-fa0e-62bb2014738a"
+        "outputId": "df97b693-836f-47dc-ead6-a6341e18d4a2"
       },
       "outputs": [
         {
@@ -62,9 +62,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fTRrYnQDTEMh",
-        "outputId": "39310db0-b4f6-4eb0-cf1c-bad801f5549c"
+        "outputId": "98f05be2-c79d-4136-b830-651241351e9a"
       },
-      "execution_count": 6,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -104,7 +104,7 @@
       "metadata": {
         "id": "xsl9cpj0TdP-"
       },
-      "execution_count": 7,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -172,26 +172,36 @@
         "final_df = x_tr_df.join(encoded_df)\n",
         "final_df.rename(columns={0:'K1',1:'K2',2:'K3',3:'K4',4:'K5',5:'K6',6:'K7',7:'K8'}, inplace=True)\n",
         "final_df.drop('F1', axis=1, inplace=True)\n",
-        "#print(final_df.head())\n",
+        "print(final_df.head())\n",
         "\n",
-        "# encoder = OneHotEncoder(handle_unknown='ignore')\n",
-        "encoded_df = pd.DataFrame(encoder.fit_transform(x_tr_df[['F3']]).toarray())\n",
-        "print(encoded_df.head())\n",
+        "\n",
+        "encoded_df = pd.DataFrame(encoder.fit_transform(x_tr_df[['F7']]).toarray())\n",
+        "#print(encoded_df.head())\n",
         "\n",
         "print('*******************')\n",
         "final_df = final_df.join(encoded_df)\n",
-        "final_df.rename(columns={0:'R1',1:'R2',2:'R3',3:'R4',4:'R5',5:'R6',6:'R7',7:'R8',8:'R9',9:'R10',10:'R11',11:'R12',12:'R13',13:'R14',14:'R15',15:'R16'}, inplace=True)\n",
-        "final_df.drop('F3', axis=1, inplace=True)\n",
-        "print(final_df.head())\n"
+        "final_df.rename(columns={0:'M1',1:'M2',2:'M3',3:'M4',4:'M5',5:'M6'}, inplace=True)\n",
+        "final_df.drop('F7', axis=1, inplace=True)\n",
+        "print(final_df.head())\n",
+        "\n",
+        "# encoder = OneHotEncoder(handle_unknown='ignore')\n",
+        "#encoded_df = pd.DataFrame(encoder.fit_transform(final_df[['F3']]).toarray())\n",
+        "#print(encoded_df.head())\n",
+        "\n",
+        "#print('*******************')\n",
+        "#final_df = final_df.join(encoded_df)\n",
+        "#final_df.rename(columns={0:'R1',1:'R2',2:'R3',3:'R4',4:'R5',5:'R6',6:'R7',7:'R8',8:'R9',9:'R10',10:'R11',11:'R12',12:'R13',13:'R14',14:'R15',15:'R16'}, inplace=True)\n",
+        "#final_df.drop('F3', axis=1, inplace=True)\n",
+        "#print(final_df.head())\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "eZ16glfaSw3K",
-        "outputId": "da29910e-1e92-4942-93ce-37b963e22a8e"
+        "outputId": "3d984fac-14d6-44d0-8291-b54f4e9f4d7a"
       },
-      "execution_count": 99,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -204,12 +214,6 @@
             "3  54  K3  176681  R2   9  Q2   P1  M2      black    Male   0   0  20  USA\n",
             "4  39  K3  115076  R6  10  Q2  P10  M2  caucasian    Male   0   0  40  USA\n",
             "*******************\n",
-            "     0    1    2    3    4    5    6    7\n",
-            "0  0.0  0.0  1.0  0.0  0.0  0.0  0.0  0.0\n",
-            "1  0.0  0.0  1.0  0.0  0.0  0.0  0.0  0.0\n",
-            "2  0.0  0.0  0.0  0.0  0.0  1.0  0.0  0.0\n",
-            "3  0.0  0.0  1.0  0.0  0.0  0.0  0.0  0.0\n",
-            "4  0.0  0.0  1.0  0.0  0.0  0.0  0.0  0.0\n",
             "*******************\n",
             "   F0      F2  F3  F4  F5   F6  F7         F8      F9 F10  ... F12  F13   K1  \\\n",
             "0  27  130067  R6  10  Q1   P2  M1  caucasian  Female   0  ...  65  USA  0.0   \n",
@@ -226,35 +230,28 @@
             "4  0.0  1.0  0.0  0.0  0.0  0.0  0.0  \n",
             "\n",
             "[5 rows x 21 columns]\n",
-            "    0    1    2    3    4    5    6    7    8    9    10   11   12   13   14  \\\n",
-            "0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  1.0  0.0  0.0   \n",
-            "1  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  1.0  0.0  0.0  0.0  0.0  0.0   \n",
-            "2  1.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0   \n",
-            "3  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  1.0  0.0  0.0  0.0  0.0  0.0  0.0   \n",
-            "4  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  0.0  1.0  0.0  0.0   \n",
-            "\n",
-            "    15  \n",
-            "0  0.0  \n",
-            "1  0.0  \n",
-            "2  0.0  \n",
-            "3  0.0  \n",
-            "4  0.0  \n",
+            "     0    1    2    3    4    5\n",
+            "0  1.0  0.0  0.0  0.0  0.0  0.0\n",
+            "1  0.0  0.0  0.0  1.0  0.0  0.0\n",
+            "2  0.0  1.0  0.0  0.0  0.0  0.0\n",
+            "3  0.0  1.0  0.0  0.0  0.0  0.0\n",
+            "4  0.0  1.0  0.0  0.0  0.0  0.0\n",
             "*******************\n",
-            "   F0      F2  F4  F5   F6  F7         F8      F9 F10 F11  ...   R7   R8    8  \\\n",
-            "0  27  130067  10  Q1   P2  M1  caucasian  Female   0   0  ...  0.0  0.0  0.0   \n",
-            "1  18  703067   7  Q1   P6  M4  caucasian    Male   0   0  ...  0.0  0.0  0.0   \n",
-            "2  33  144949  13  Q2   P6  M2  caucasian    Male   0   0  ...  0.0  0.0  0.0   \n",
-            "3  54  176681   9  Q2   P1  M2      black    Male   0   0  ...  0.0  0.0  1.0   \n",
-            "4  39  115076  10  Q2  P10  M2  caucasian    Male   0   0  ...  0.0  0.0  0.0   \n",
+            "   F0      F2  F3  F4  F5   F6         F8      F9 F10 F11  ...   K5   K6   K7  \\\n",
+            "0  27  130067  R6  10  Q1   P2  caucasian  Female   0   0  ...  0.0  0.0  0.0   \n",
+            "1  18  703067  R3   7  Q1   P6  caucasian    Male   0   0  ...  0.0  0.0  0.0   \n",
+            "2  33  144949  R1  13  Q2   P6  caucasian    Male   0   0  ...  0.0  1.0  0.0   \n",
+            "3  54  176681  R2   9  Q2   P1      black    Male   0   0  ...  0.0  0.0  0.0   \n",
+            "4  39  115076  R6  10  Q2  P10  caucasian    Male   0   0  ...  0.0  0.0  0.0   \n",
             "\n",
-            "     9   10   11   12   13   14   15  \n",
-            "0  0.0  0.0  0.0  1.0  0.0  0.0  0.0  \n",
-            "1  1.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-            "2  0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-            "3  0.0  0.0  0.0  0.0  0.0  0.0  0.0  \n",
-            "4  0.0  0.0  0.0  1.0  0.0  0.0  0.0  \n",
+            "    K8   M1   M2   M3   M4   M5   M6  \n",
+            "0  0.0  1.0  0.0  0.0  0.0  0.0  0.0  \n",
+            "1  0.0  0.0  0.0  0.0  1.0  0.0  0.0  \n",
+            "2  0.0  0.0  1.0  0.0  0.0  0.0  0.0  \n",
+            "3  0.0  0.0  1.0  0.0  0.0  0.0  0.0  \n",
+            "4  0.0  0.0  1.0  0.0  0.0  0.0  0.0  \n",
             "\n",
-            "[5 rows x 36 columns]\n"
+            "[5 rows x 26 columns]\n"
           ]
         }
       ]
