Creato con Colaboratory

--- a/test_routine.ipynb
+++ b/test_routine.ipynb
@@ -6,7 +6,7 @@
       "name": "test_routine.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMGJmN6Gys9clh0tK+YOAS4",
+      "authorship_tag": "ABX9TyPPL4ZRPQ/iSWlvku87jEBG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,22 +35,10 @@
         "drive.mount('/content/drive')"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "EuV7lzE1AwhS",
-        "outputId": "a8cd06a2-a18a-4ace-922e-64633fbbe509"
+        "id": "EuV7lzE1AwhS"
       },
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Mounted at /content/drive\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -58,22 +46,10 @@
         "%cd /content/drive/My\\ Drive/ProgettoMOBD"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "pj1mRrEoA566",
-        "outputId": "cc82f818-0aa6-4cd9-ffd0-dfb24f1b9906"
+        "id": "pj1mRrEoA566"
       },
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "/content/drive/My Drive/ProgettoMOBD\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -94,9 +70,9 @@
         "np.random.seed = 123456"
       ],
       "metadata": {
-        "id": "iroYbOGTA9ze"
+        "id": "Ci4dV5gsRj6X"
       },
-      "execution_count": 8,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -107,7 +83,7 @@
         "print(train.shape)\n",
         "\n",
         "# QUI LETTURA DEL SUO TEST SET\n",
-        "test = pd.read_csv(\"test.csv\", sep=\",\")\n",
+        "test = pd.read_csv(\"test_set.csv\", sep=\",\")\n",
         "print(test.shape)"
       ],
       "metadata": {
@@ -136,22 +112,10 @@
         "print(x_ts_notnan.shape)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "i8TUDI3pfgrC",
-        "outputId": "7f245e4c-1adf-4df1-b32b-a596354aa739"
+        "id": "i8TUDI3pfgrC"
       },
-      "execution_count": 11,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "(16248, 14)\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -235,27 +199,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "1e8HplnU9QOm",
-        "outputId": "f320272b-b1c3-451e-b8a2-9e51b3317e62"
+        "id": "1e8HplnU9QOm"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Accuracy on test set 0.8721073362875431\n",
-            "\n",
-            "F1 score on test set 0.7092893116955792\n",
-            "[[11635   771]\n",
-            " [ 1307  2535]]\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "from joblib import load\n",
         "classifier = load('classifier.joblib')\n",
