Test routine per la consegna

--- a/test_routine.ipynb
+++ b/test_routine.ipynb
@@ -6,7 +6,6 @@
       "name": "test_routine.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPPL4ZRPQ/iSWlvku87jEBG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,10 +34,22 @@
         "drive.mount('/content/drive')"
       ],
       "metadata": {
-        "id": "EuV7lzE1AwhS"
+        "id": "EuV7lzE1AwhS",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "14be3f88-dc1a-4054-9f3a-5cf80fc59a3b"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -46,10 +57,22 @@
         "%cd /content/drive/My\\ Drive/ProgettoMOBD"
       ],
       "metadata": {
-        "id": "pj1mRrEoA566"
+        "id": "pj1mRrEoA566",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a615435b-a0e3-4068-d0d8-158c5f305ce5"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content/drive/My Drive/ProgettoMOBD\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -58,6 +81,9 @@
         "import pandas as pd\n",
         "import numpy as np\n",
         "\n",
+        "import dill\n",
+        "import cloudpickle\n",
+        "\n",
         "from sklearn.preprocessing import OneHotEncoder\n",
         "from sklearn.model_selection import train_test_split, GridSearchCV\n",
         "from sklearn.ensemble import GradientBoostingClassifier\n",
@@ -65,154 +91,90 @@
         "from sklearn.preprocessing import RobustScaler\n",
         "from imblearn.under_sampling import RandomUnderSampler, ClusterCentroids\n",
         "from sklearn import tree\n",
+        "from sklearn.pipeline import Pipeline\n",
         "from sklearn.metrics import accuracy_score, confusion_matrix, precision_score, recall_score, f1_score\n",
         "\n",
-        "np.random.seed = 123456"
+        "from joblib import load\n",
+        "\n",
+        "np.random.seed = 123457\n",
+        "\n",
+        "# FILES PER ESEGUIRE LA TEST ROUTINE\n",
+        "training_set_filename = \"train.csv\"\n",
+        "test_set_filename = \"test_set.csv\" \n",
+        "preprocessor_filename = 'preprocessor.pkl'\n",
+        "classifier_filename = 'classifier.joblib'"
       ],
       "metadata": {
         "id": "Ci4dV5gsRj6X"
       },
-      "execution_count": 19,
+      "execution_count": 38,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# LETTURA TRAINING SET\n",
-        "train = pd.read_csv(\"train.csv\", sep=\",\")\n",
-        "print(train.shape)\n",
+        "# LETTURA TEST SET\n",
+        "test = pd.read_csv(test_set_filename, sep=\",\")\n",
+        "print(test.shape)\n",
         "\n",
-        "# QUI LETTURA DEL SUO TEST SET\n",
-        "test = pd.read_csv(\"test_set.csv\", sep=\",\")\n",
-        "print(test.shape)"
-      ],
-      "metadata": {
-        "id": "vAAaTn_xC1Tg"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# GESTIONE VALORI MANCANTI\n",
-        "\n",
+        "#PREPROCESSING TEST SET\n",
         "x_test = test.iloc[:, :-1].to_numpy()\n",
         "y_test = test.iloc[:, -1].to_numpy()\n",
         "\n",
-        "x_train = train.iloc[:, :-1].to_numpy()\n",
-        "y_train = train.iloc[:, -1].to_numpy()\n",
+        "print(x_test.shape)\n",
         "\n",
-        "#coerente con le operazioni fatte nella routine di addestramento\n",
-        "imp = SimpleImputer(missing_values=np.nan, strategy = 'most_frequent')\n",
-        "x_tr_notnan = imp.fit_transform(x_train)\n",
-        "# la sostituzione sul test set avviene con il most_frequent calcolato sul training set\n",
-        "x_ts_notnan = imp.transform(x_test)\n",
+        "with open(preprocessor_filename, 'rb') as in_file:\n",
+        "    preprocessor = dill.load(in_file)\n",
         "\n",
-        "print(x_ts_notnan.shape)"
-      ],
-      "metadata": {
-        "id": "i8TUDI3pfgrC"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# GESTIONE FEATURES CATEGORICHE\n",
+        "x_test = preprocessor.transform(x_test)\n",
+        "print(x_test.shape)\n",
         "\n",
-        "def one_hot_encoding(df):\n",
-        "  final_df = pd.concat([df,pd.get_dummies(df['F1'])],axis = 1)\n",
-        "  final_df.drop('F1', axis=1, inplace=True)\n",
-        "  final_df = pd.concat([final_df,pd.get_dummies(df['F3'])],axis = 1)\n",
-        "  final_df.drop('F3', axis=1, inplace=True)\n",
-        "  final_df = pd.concat([final_df,pd.get_dummies(df['F7'])],axis = 1)\n",
-        "  final_df.drop('F7', axis=1, inplace=True)\n",
-        "  final_df = pd.concat([final_df,pd.get_dummies(df['F9'])],axis = 1)\n",
-        "  final_df.drop('F9', axis=1, inplace=True)\n",
-        "  final_df = pd.concat([final_df,pd.get_dummies(df['F8'])],axis = 1)\n",
-        "  final_df.drop('F8', axis=1, inplace=True)\n",
-        "  final_df = pd.concat([final_df,pd.get_dummies(df['F5'])],axis = 1)\n",
-        "  final_df.drop('F5', axis=1, inplace=True)\n",
-        "  final_df = pd.concat([final_df,pd.get_dummies(df['F6'])],axis = 1)\n",
-        "  final_df.drop('F6', axis=1, inplace=True)\n",
-        "  final_df = pd.concat([final_df,pd.get_dummies(df['F13'])],axis = 1)\n",
-        "  final_df.drop('F13', axis=1, inplace=True)\n",
-        "  return  final_df"
-      ],
-      "metadata": {
-        "id": "j4JRFoLlkVC2"
-      },
-      "execution_count": 12,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# PREPROCESSING\n",
-        "# coerente con quello eseguito nella fase di addestramento\n",
-        "\n",
-        "x_test = pd.DataFrame(x_test)\n",
-        "x_test.columns=['F0','F1','F2','F3','F4','F5','F6','F7','F8','F9','F10','F11','F12','F13']\n",
-        "final_df_ts = one_hot_encoding(x_test)\n",
-        "\n",
-        "# la align la stiamo usando perchè con get_dummies purtroppo se qualche valore che compare in uno dei due set\n",
-        "# non è presente nell'altro, non verrà generata la colonna corrispondente, per cui non è detto che i due dataframe che si \n",
-        "# vanno ad usare abbiano stesso insieme di colonne, potrebbe succedere la stessa cosa se si andasse ad usare un dataset \n",
-        "# che non si conosce oppure in previsione del caso in cui in futuro ci siano valori di cui non si è tenuto conto\n",
-        "\n",
-        "x_train = pd.DataFrame(x_train)\n",
-        "x_train.columns=['F0','F1','F2','F3','F4','F5','F6','F7','F8','F9','F10','F11','F12','F13']\n",
-        "final_df_tr = one_hot_encoding(x_train)\n",
-        "\n",
-        "x_tr, x_ts = final_df_tr.align(final_df_ts, join=\"outer\", axis=1,fill_value=0)\n",
-        "#print(x_tr.tail())\n",
-        "#print(x_ts.tail())"
-      ],
-      "metadata": {
-        "id": "XZDLh12PUEB3"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# SCALING\n",
-        "print(\"Robust Scaler\")\n",
-        "scaler = RobustScaler()\n",
-        "x_tr_scaled = scaler.fit_transform(x_tr)\n",
-        "x_ts_scaled = scaler.transform(x_ts)\n",
-        "\n",
-        "print(\"Media distribuzione di partenza: {}\".format(np.mean(x_ts, axis=0)))\n",
-        "print(\"Media distribuzione scalata: {}\".format(np.mean(x_ts_scaled, axis=0)))\n",
-        "\n",
-        "print(\"Deviazione standard distribuzione di partenza: {}\".format(np.std(x_ts, axis=0)))\n",
-        "print(\"Deviazione standard distribuzione scalata: {}\".format(np.std(x_ts_scaled, axis=0)))"
-      ],
-      "metadata": {
-        "id": "onM5LJjDlMZG"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "1e8HplnU9QOm"
-      },
-      "outputs": [],
-      "source": [
-        "from joblib import load\n",
-        "classifier = load('classifier.joblib')\n",
-        "\n",
-        "y_ts_pred = classifier.predict(x_ts_scaled)\n",
+        "#CLASSIFICATORE\n",
+        "classifier = load(classifier_filename)\n",
+        "y_ts_pred = classifier.predict(x_test)\n",
         "\n",
         "print(\"Accuracy on test set {}\\n\".format(accuracy_score(y_test, y_ts_pred)))\n",
-        "print(\"F1 score on test set {}\".format(f1_score(y_test, y_ts_pred)))\n",
+        "print(\"F1 score on test set {}\\n\".format(f1_score(y_test, y_ts_pred)))\n",
         "print(confusion_matrix(y_test, y_ts_pred))"
+      ],
+      "metadata": {
+        "id": "vAAaTn_xC1Tg",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "50e6b409-7d4b-4a67-9e71-c0e7d8787530"
+      },
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(48842, 15)\n",
+            "(48842, 14)\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/sklearn/utils/validation.py:1692: FutureWarning: Feature names only support names that are all strings. Got feature names with dtypes: ['int', 'str']. An error will be raised in 1.2.\n",
+            "  FutureWarning,\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(48842, 58)\n",
+            "Accuracy on test set 0.8832766880963105\n",
+            "\n",
+            "F1 score on test set 0.7378488986986712\n",
+            "\n",
+            "[[35118  2037]\n",
+            " [ 3664  8023]]\n"
+          ]
+        }
       ]
     }
   ]
